2009-07-01	Mike Massonnet
Split Clipman in two binaries, one for the panel and one for notification area

	- panel-plugin/plugin.[ch]:
		Contains common code for poping up the main menu, displaying
		the settings and about dialog.
	- panel-plugin/main-panel-plugin.c:
		Code related to the panel plugin only. The heavy preint/check
		functions are gone.
	- panel-plugin/main-status-icon.c:
		Code to build the status icon for the notification are within
		a main function.
	- panel-plugin/Makefile.am:
		The panel plugin gets installed under libexec again, and the
		standalone binary is installed under bin as xfce4-clipman.

2009-05-30	Mike Massonnet
Use GIO to track changes over the actions xml file

	- panel-plugin/actions.c:
		Use a GFile and replace old functions g_file_set/get_contents
		against g_file_replace/load_contents. Note: the function
		g_file_replace_contents does not work with size = -1.

2009-05-29	Mike Massonnet
Move the settings dialog outside

	- panel-plugin/Makefile.am:
		Build new binary xfce4-clipman-settings.
		Remove Glade dependency on the panel plugin.
	- panel-plugin/xfce4-clipman-settings.c:
		Moved all settings dialog related functions from main.c to
		this file.
	- panel-plugin/main.c:
		Make a call to xfce4-clipman-settings instead.

2009-05-29	Mike Massonnet
=== Release 1.0.2 ===

2009-06-28	Mike Massonnet
Drop inhibit option

	- panel-plugin/collector.[ch]:
		Remove inhibit property.
	- panel-plugin/main.c, panel-plugin/menu.c:
		Same here, wipe out code related to the inhibit option.

2009-05-15	Mike Massonnet
Only consider XFCE for OnlyShowIn

	- xfce4-clipman-plugin.desktop.in:
		Do not include GNOME, KDE and LXDE, it is best to show the
		Xfce Clipman Plugin only inside an XFCE menu.

2009-05-15	Mike Massonnet
Do not consider text/html as text

	- panel-plugin/collector.c(cb_clipboard_owner_change):
		Drop check on text/html atom.

2009-05-14	Mike Massonnet
=== Release 1.0.1 ===

2009-05-14	Mike Massonnet